[tool.poetry]
name = "loading"
version = "0.1.0"
description = ""
authors = ["mromao-d <romaog.manuel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "^3.0.3"
numpy = "^2.4.6"
requests = "^2.34.2"
matplotlib = "^3.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
